# calculer_moyenne

./: Fonction.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-deploy.yml
tests/: test_fonction.py
