[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculer_moyenne"
version = "0.1.0"
description = "Python calculation and averaging utility"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "elbazsoumia27", email = "your-email@example.com"}
]

[tool.setuptools]
py-modules = ["Fonction"]
